<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/navigation_disease"
        android:icon="@drawable/ic_disease"
        android:title="@string/nav_disease" />
    
    <item
        android:id="@+id/navigation_prices"
        android:icon="@drawable/ic_prices"
        android:title="@string/nav_prices" />
    
    <item
        android:id="@+id/navigation_marketplace"
        android:icon="@drawable/ic_marketplace"
        android:title="@string/nav_marketplace" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>
